--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1525,7 +1525,7 @@ body {
 .cid-qwU0Se3wgU {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/q.jpg");
+  background-image: url("../../../assets/images/savedate.jpg");
 }
 .cid-qwTFJw1Ewk {
   padding-top: 90px;
@@ -1905,7 +1905,7 @@ body {
 .cid-qwU4wNrBmt {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
+  background-image: url("../../../assets/images/footer.jpg");
 }
 .cid-qwUcdm4XA3 {
   padding-top: 30px;
