--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1339,7 +1339,7 @@ body {
   min-height: 100vh;
 }
 .cid-qwTCuJooM6 {
-  background-image: url("../../../assets/images/main-background.jpg");
+  background-image: url("../../../assets/images/q.jpg");
 }
 .cid-qwTCuJooM6 .mbr-section-subtitle {
   font-style: italic;
