fixes bg image issues
fixes bg image issues

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1362,7 +1362,7 @@ body {
 .cid-qwTDXa80kH {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/gaby.jpg");
+  background-image: url("../../../assets/images/gaby.JPG");
 }
 @media (min-width: 992px) {
   .cid-qwTDXa80kH .mbr-figure {
